--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
   </head>
-  <body onload="nada">
+  <body onload="generadorDeExcusas">
     <script src="app.js"></script>
     <div id="main" class="container-fluid text-center">
       <p style="font-size: 1cm"><strong>"OMG! you will not belied me but..."</strong></p>
